# pcl-detection-nlp

./: .gitattributes  .gitignore  README.md  basic_tests.ps1  coursework_runner.ipynb  dev.txt  pyproject.toml  report.tex  requirements.txt  test.txt
BestModel/: README.md  best_artifact_ensemble.json  best_hybrid_ensemble.json  best_roberta_finetune.json  best_roberta_probe.json  best_tfidf_ensemble.json  best_tfidf_svm.json  bundle_manifest.json  coursework_runner.ipynb  metrics.json
BestModel/checkpoints/best_hybrid_ensemble/: metrics.json
archive/: README.md  basic_tests.ps1
archive/configs/: exp_01.json  exp_02.json  exp_03.json  exp_04.json  exp_05.json  exp_06.json  exp_07.json  exp_08.json  exp_09.json  exp_10.json  exp_11.json  exp_12.json  exp_13.json  exp_14.json  exp_15.json  exp_16.json  exp_17.json  exp_18.json  exp_19.json  exp_20.json  exp_21.json  exp_22.json  exp_23.json  exp_24.json  exp_25.json  exp_26.json  exp_27.json  exp_28.json  exp_29.json  exp_30.json  exp_31.json  exp_32.json  exp_33.json  exp_34.json  roberta_continue_01.json  roberta_frozen_01.json  roberta_full_01.json  roberta_offline_01.json  roberta_probe_01.json
configs/: baseline.json  best_artifact_ensemble.json  best_roberta_finetune.json  best_roberta_probe.json  roberta_download_template.json  roberta_probe_finetuned_01.json
src/pcl_detection/: __init__.py  cli.py  config.py  experiment_utils.py  models.py  notebook_support.py  training_pipeline.py  workflow.py
tests/: __init__.py  test_data.py  test_experiments.py  test_export.py  test_metrics.py
(+16 files in other folders)
