[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pcl-detection-nlp"
version = "0.1.0"
description = "Baseline scaffold for PCL detection coursework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=7.2",
]
roberta = [
    "torch>=2.2",
    "transformers>=4.40",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
